traefik-endpoints/external/portainer/service.yaml
---
apiVersion: v1  
kind: Service  
metadata:  
  name: portainer 
spec:  
  ports:  
    - protocol: TCP  
      port: 443  
      targetPort: 9443
